--- a/wine/Wine Quality.ipynb
+++ b/wine/Wine Quality.ipynb
@@ -336,7 +336,7 @@
         "end\n",
         "\n",
         "\n",
-        "# Define the build Function \n",
+        "# Define the build function \n",
         "function MLJFlux.build(B::MyANNBuilder, n_in, n_out)\n",
         "  h1 = B.h1\n",
         "  h2 = B.h2  \n",
@@ -494,24 +494,6 @@
           "iopub.status.busy": "2020-10-02T02:16:15.515Z",
           "iopub.execute_input": "2020-10-02T02:16:15.519Z",
           "iopub.status.idle": "2020-10-02T02:16:15.528Z"
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
         }
       }
     }
